# wart

./: .SRCINFO  .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  flake.nix  wart.cc  wart.hh
